I moved the initial report and included its PDF form.
I decided to keep notes and reports in their own folder and moved the
initial report into that directory.

I also decided to include the PDF form of the LaTeX report so that it can
be easily read without downloading and running a LaTeX tool.

Signed-off-by: REALDrummer <conman.davey@gmail.com>

--- a/notes and reports/initial report.tex
+++ b/notes and reports/initial report.tex
@@ -4,7 +4,7 @@
 \usepackage{multicol}				% used for making multi-column sections
 \usepackage[margin=1in]{geometry}	% controls margins
 \usepackage{indentfirst}			% indents the first lines of the first paragraphs after sections
-% \usepackage{hyperref}
+\usepackage{hyperref}
 
 \newcommand{\name}{\textbackslash{}English}
 
@@ -71,8 +71,8 @@ Operators' true function comes from the "asm" operator, which allows the use of 
 
 \begin{thebibliography}{9}
 \bibitem{Sanner99}\texttt{"Python’s elegant, and not overly cryptic, syntax emphasizes support for common programming methodology and promotes code readability and thus maintainability."} -- Sanner, Michel F. \emph{Python: a programming language for software integration and development}. J Mol Graph Model 17.1 (1999): 57-61.
-%\bibitem{PythonVsJava}\href{http://benchmarksgame.alioth.debian.org/u64q/python.html}{http://benchmarksgame.alioth.debian.org/u64q/python.html}
-%\bibitem{PythonVsC}\href{http://benchmarksgame.alioth.debian.org/u64q/compare.php?lang=python3&lang2=gcc}{http://benchmarksgame.alioth.debian.org/u64q/compare.php?lang=python3&lang2=gcc}
+\bibitem{PythonVsJava}\href{http://benchmarksgame.alioth.debian.org/u64q/python.html}{\texttt{http://benchmarksgame.alioth.debian.org/u64q/python.html}}
+\bibitem{PythonVsC}\href{http://benchmarksgame.alioth.debian.org/u64q/compare.php?lang=python3\&lang2=gcc}{\texttt{http://benchmarksgame.alioth.debian.org/u64q/compare.php?lang=python3\&lang2=gcc}}
 \bibitem{Cai05}\texttt{"It is fair to say that the core of the Python programming language is not particularly suitable for scientific applications involving intensive computations. This is mainly due to slow execution of long nested loops and the lack of efficient array data structures."} -- Cai, Xing, Hans Petter Langtangen, and Halvard Moe. \emph{On the performance of the Python programming language for serial and parallel scientific computations.} Scientific Programming 13.1 (2005): 31-56.
 \end{thebibliography}
 \end{document}
