Fixed citations in initial report
In the initial report, some marks that were previously footnotes had
some numbers after them. Those numbers have been replaced with proper
LaTeX citations or hyperlinks as necessary.

Signed-off-by: REALDrummer <conman.davey@gmail.com>

--- a/notes and reports/initial report.tex
+++ b/notes and reports/initial report.tex
@@ -33,7 +33,7 @@ In the 1940s in the newly emerging field of computer science, the idea of progra
 		\item efficiency (esp. runtime)
 	\end{itemize}
 	\end{multicols}
-\indent While all practical programming languages attempt to address all of these problems to some extent, more often than not, some of these important properties are sacrificed in order to improve some of the remaining properties. Generally, in more recent decades of computer science, runtime efficiency has been sacrificed more and more in favor of readability and understandability. As computers became more widely used and programming professions and projects became more commonplace, programming languages became easier to read, learn, and use. However, this often came at a great cost to efficiency. For example, Python is a high-level language often revered as one of the simplest to read and understand\cite{Sanner99} with modern day usage in many areas, especially concerning web development (see Django2 as an example). However, Python sacrifices programming efficiency in order to achieve much of this readability3,4,5.\\
+\indent While all practical programming languages attempt to address all of these problems to some extent, more often than not, some of these important properties are sacrificed in order to improve some of the remaining properties. Generally, in more recent decades of computer science, runtime efficiency has been sacrificed more and more in favor of readability and understandability. As computers became more widely used and programming professions and projects became more commonplace, programming languages became easier to read, learn, and use. However, this often came at a great cost to efficiency. For example, Python is a high-level language often revered as one of the simplest to read and understand\cite{Sanner99} with modern day usage in many areas, especially concerning web development (see \href{https://www.djangoproject.com/}{Django} as an example). However, Python sacrifices programming efficiency in order to achieve much of this readability\cite{PythonVsJava}\cite{PythonVsC}\cite{Cai05}.\\
 \indent \name{} seeks to unite extreme simplicity and readability with high orders of efficiency using everything from high-level high order functionality to low-level Assembly programming. The grammar of the language is intended to closely relate to ordinary English (hence the name of the language) while maintaining and extending a few of the most basic, widely used programming language syntactic structures. Meanwhile, the ability to write "safe" Assembly code integrated into a highly functional language allows for powerful extensibility and high potential for runtime efficiency.
 	
 \section{Language Overview}
