--- a/notes and reports/initial report.tex
+++ b/notes and reports/initial report.tex
@@ -4,7 +4,7 @@
 \usepackage{multicol}				% used for making multi-column sections
 \usepackage[margin=1in]{geometry}	% controls margins
 \usepackage{indentfirst}			% indents the first lines of the first paragraphs after sections
-\usepackage{hyperref}
+\usepackage{hyperref}				% allows the use of hyperlinks
 
 \newcommand{\name}{\textbackslash{}English}
 
