I fixed the "read" operator in examples and coloring.
First, I found an issue with one of my examples in that it was trying to
convert a string to a byte rather than "read" the string to a byte. Since
these may be different as taking a string as a byte might be asking it to
grab the first char of the string as a byte or something equally weird,
I eliminated the ambiguity by using the "read" operator instead.

Second, this made me realize that the "read" operator was not properly
defined in the Gedit coloring scheme. I not only added the word "read" by
itself to the list of available operators in the "common defines", but I
also gave read its own context definition to color the "as a" of the
"read <string> as a <type>" properly.

Signed-off-by: REALDrummer <conman.davey@gmail.com>

--- a/gedit coloring/\English.lang
+++ b/gedit coloring/\English.lang
@@ -536,6 +536,15 @@
 						</context>
 					</include>
 				</context>
+				
+				<context id="read-as-a">
+					<start>\bread\b(?=[^\n]*\bas\s+an?\b)</start>
+					<end>\bas\s+an?\b</end>
+					<include>
+						<context sub-pattern="0" where="start" style-ref="common-defines"/>
+						<context sub-pattern="0" where="end" style-ref="common-defines"/>
+					</include>
+				</context>
 
 				<context id="basic-operators" style-ref="common-defines" class="common-defines">
 					<match extended="true">\b(
@@ -584,9 +593,8 @@
 						try(\s+to)?|
 						(and\s+)?catch(\s+any)?|
 						print|
+						read|
 						(a\s+)?new|
-						(a\s+)?new\s+type\s+of|
-						(new\s+)?types\s+of|
 						swap|switch		# this switch is an alias for "swap"; it is different from the switch-case setup
 					)\b</match>
 				</context>
@@ -597,7 +605,6 @@
 						as(\s+an?)?|
 						run|
 						using|
-						with|
 						(copies|clones)\s+of|
 						(a\s+)?(copy|clone)(\s+of)?|
 						((return|enviro)-)?final|
